Working Amount counter. Both the total sum of the products, and amount of products works correctly. Might want to set them both to right aligned tho

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,9 @@
     -fx-font-family: "Lexend Deca";
 }
 
+.shoppingLabel{
+    -fx-text-alignment: right;
+}
 .searchBox{
     -fx-arc-height: 50px;
     -fx-arc-width: 50px;
